ADA-313 remove highlight color from footer anchor tags to fix contrast ratio

--- a/app/assets/stylesheets/includes/footer.scss
+++ b/app/assets/stylesheets/includes/footer.scss
@@ -14,7 +14,6 @@ footer {
     transition: color 0.25s;
 
     &:hover, &:focus {
-      color: $color-anchor-highlight;
       background-color: transparent;
     }
   }
